// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config import "frodo config import --default -CAD test/e2e/exports/all-separate/cloud" Import everything from directory "test/e2e/exports/all-separate/cloud", including default scripts. Clean old services 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Resolving dependencies
✔ Resolved all dependencies.
- Resolving dependencies
✔ Resolved all dependencies.
Errors occurred during full config import
  Error importing config entities
  Error updating config entity bravoOrgPrivileges
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity entityId
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity external.email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity external.emailDefault
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error importing services
  Error putting global full service configs
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error importing scripts
  Error updating script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
  Error updating script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
  Error importing scripts
  Error updating script
  HTTP client error
    Code: ERR_BAD_RESPONSE
    Status: 502
  Error updating script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
  Error importing services
  Error putting realm full service configs
  Error putting realm full service config TNTPPingOneService
  Error putting descendent 'p1-volker-dev' of service 'TNTPPingOneService'
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Invalid config: Unable to add subConfig PingOneService
"
`;

exports[`frodo config import "frodo config import -AD test/e2e/exports/all-separate/cloud --include-active-values" Import everything with secret values from directory "test/e2e/exports/all-separate/cloud" 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Resolving dependencies
✔ Resolved all dependencies.
- Resolving dependencies
✔ Resolved all dependencies.
Errors occurred during full config import
  Error importing config entities
  Error updating config entity bravoOrgPrivileges
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity entityId
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity external.email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error importing applications
  Error updating application 0f357b7e-6c54-4351-a094-43916877d7e5
  HTTP client error
    Code: ERR_BAD_RESPONSE
    Status: 502
  Error updating application e124e6f6-e25a-4180-a6c3-ff8b782a422c
  HTTP client error
    Code: ERR_BAD_RESPONSE
    Status: 503
"
`;

exports[`frodo config import "frodo config import -AD test/e2e/exports/all-separate/cloud" Import everything from directory "test/e2e/exports/all-separate/cloud" 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Resolving dependencies
✔ Resolved all dependencies.
- Resolving dependencies
✔ Resolved all dependencies.
Errors occurred during full config import
  Error importing config entities
  Error updating config entity bravoOrgPrivileges
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity entityId
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity external.email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
"
`;

exports[`frodo config import "frodo config import -AdD test/e2e/exports/all-separate/classic -m classic" Import everything from directory "test/e2e/exports/all-separate/classic" 1`] = `undefined`;

exports[`frodo config import "frodo config import -CAD test/e2e/exports/all-separate/cloud" Import everything from directory "test/e2e/exports/all-separate/cloud". Clean old services 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Resolving dependencies
✔ Resolved all dependencies.
- Resolving dependencies
✔ Resolved all dependencies.
Errors occurred during full config import
  Error importing config entities
  Error updating config entity entityId
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity external.email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error importing services
  Error putting global full service configs
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error importing journeys
  Error importing journey 'IntervieweeFullVerification'
  Error importing inner node 1895ec19-f7ca-45b4-ae9b-20946e7183ef in journey IntervieweeFullVerification
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, PingOne Service
  Error importing journey 'IntervieweeSelfieAuthentication'
  Error importing inner node e08c5232-2b8c-4d40-958b-2cb5a261d5e6 in journey IntervieweeSelfieAuthentication
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, PingOne Service
  Error importing services
  Error putting realm full service configs
  Error putting realm full service config TNTPPingOneService
  Error putting descendent 'JC' of service 'TNTPPingOneService'
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Invalid config: Unable to add subConfig PingOneService
"
`;

exports[`frodo config import "frodo config import -aCf test/e2e/exports/all/all.cloud.json" Import everything from "all.cloud.json". Clean old services 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Resolving dependencies
✔ Resolved all dependencies.
- Resolving dependencies
✔ Resolved all dependencies.
Errors occurred during full config import
  Error importing config entities
  Error updating config entity bravoOrgPrivileges
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity entityId
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity external.email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error importing services
  Error putting global full service configs
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
"
`;

exports[`frodo config import "frodo config import -adf test/e2e/exports/all/all.classic.json -m classic" Import everything from "all.classic.json", including default scripts. 1`] = `undefined`;

exports[`frodo config import "frodo config import -adf test/e2e/exports/all/all.cloud.json" Import everything from "all.cloud.json", including default scripts. 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
- Resolving dependencies
✔ Resolved all dependencies.
- Resolving dependencies
✔ Resolved all dependencies.
Errors occurred during full config import
  Error importing config entities
  Error updating config entity entityId
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error updating config entity external.email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
  Error importing scripts
  Error updating script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
  Error updating script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
  Error importing scripts
  Error updating script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
  Error updating script
  HTTP client error
    Code: ERR_BAD_RESPONSE
    Status: 502
"
`;
